packages/sfdx/force-app/main/default/objects/evttrackr_EvtTrackrTicket__c/fields/evttrackr_Description__c.field-meta.xml
<CustomField>
    <fullName>evttrackr_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>