packages/sfdx/force-app/main/default/objects/evttrackr_EvtTrackrTicket__c/fields/evttrackr_EvtTrackrEvent__c.field-meta.xml
<CustomField>
    <fullName>evttrackr_EvtTrackrEvent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EvtTrackrEvent</label>
    <referenceTo>evttrackr_EvtTrackrEvent__c</referenceTo>
    <relationshipLabel>EvtTrackrTickets</relationshipLabel>
    <relationshipName>EvtTrackrTickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>