packages/sfdx/force-app/main/default/objects/evttrackr_EvtTrackrTicket__c/fields/evttrackr_Status__c.field-meta.xml
<CustomField>
    <fullName>evttrackr_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not registered</fullName>
                <default>true</default>
                <label>Not registered</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>